// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrupalEntity parses required fields into DrupalEntity request 1`] = `
Request {
  "agent": undefined,
  "compress": true,
  "counter": 0,
  "follow": 20,
  "size": 0,
  "timeout": 0,
  Symbol(Body internals): Object {
    "body": "{\\"data\\":{\\"type\\":\\"node--article\\",\\"attributes\\":{\\"title\\":\\"\\"}}}",
    "disturbed": false,
    "error": null,
  },
  Symbol(Request internals): Object {
    "headers": Headers {
      Symbol(map): Object {
        "Accept": Array [
          "application/vnd.api+json",
        ],
        "Content-Type": Array [
          "application/vnd.api+json",
        ],
      },
    },
    "method": "POST",
    "parsedURL": Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/jsonapi/node/article",
      "path": "/jsonapi/node/article",
      "pathname": "/jsonapi/node/article",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    "redirect": "follow",
    "signal": null,
  },
}
`;

exports[`DrupalEntity parses response into DrupalEntity request 1`] = `
Request {
  "agent": undefined,
  "compress": true,
  "counter": 0,
  "follow": 20,
  "size": 0,
  "timeout": 0,
  Symbol(Body internals): Object {
    "body": "{\\"data\\":{\\"type\\":\\"node--article\\",\\"attributes\\":{\\"drupal_internal__nid\\":1,\\"drupal_internal__vid\\":1,\\"langcode\\":\\"en\\",\\"revision_timestamp\\":\\"2019-05-13T20:57:27+00:00\\",\\"revision_log\\":null,\\"status\\":true,\\"title\\":\\"Example article\\",\\"created\\":\\"2019-05-13T20:57:16+00:00\\",\\"changed\\":\\"2019-05-13T20:57:27+00:00\\",\\"promote\\":true,\\"sticky\\":false,\\"default_langcode\\":true,\\"revision_translation_affected\\":true,\\"path\\":{\\"alias\\":null,\\"pid\\":null,\\"langcode\\":\\"en\\"},\\"body\\":{\\"value\\":\\"<p>Example content</p>\\\\r\\\\n\\",\\"format\\":\\"basic_html\\",\\"processed\\":\\"<p>Example content</p>\\",\\"summary\\":\\"\\"},\\"comment\\":{\\"status\\":2,\\"cid\\":0,\\"last_comment_timestamp\\":1557781047,\\"last_comment_name\\":null,\\"last_comment_uid\\":1,\\"comment_count\\":0}},\\"relationships\\":{\\"node_type\\":{\\"type\\":\\"node_type--node_type\\",\\"id\\":\\"483a5406-a9b9-40d3-879b-918c32e84f72\\"},\\"revision_uid\\":{\\"type\\":\\"user--user\\",\\"id\\":\\"c99a7805-bf73-4ec4-9c19-01ff41e35164\\"},\\"uid\\":{\\"type\\":\\"user--user\\",\\"id\\":\\"c99a7805-bf73-4ec4-9c19-01ff41e35164\\"},\\"field_image\\":{},\\"field_tags\\":{}}}}",
    "disturbed": false,
    "error": null,
  },
  Symbol(Request internals): Object {
    "headers": Headers {
      Symbol(map): Object {
        "Accept": Array [
          "application/vnd.api+json",
        ],
        "Content-Type": Array [
          "application/vnd.api+json",
        ],
      },
    },
    "method": "POST",
    "parsedURL": Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/jsonapi/node/article",
      "path": "/jsonapi/node/article",
      "pathname": "/jsonapi/node/article",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    "redirect": "follow",
    "signal": null,
  },
}
`;

exports[`DrupalEntity serializes get request to retrieve field config for entity 1`] = `
Request {
  "agent": undefined,
  "compress": true,
  "counter": 0,
  "follow": 20,
  "size": 0,
  "timeout": 0,
  Symbol(Body internals): Object {
    "body": null,
    "disturbed": false,
    "error": null,
  },
  Symbol(Request internals): Object {
    "headers": Headers {
      Symbol(map): Object {
        "Accept": Array [
          "application/vnd.api+json",
        ],
        "Content-Type": Array [
          "application/vnd.api+json",
        ],
      },
    },
    "method": "GET",
    "parsedURL": Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/jsonapi/field_config/field_config?filter[entity_type]=node&filter[bundle]=article",
      "path": "/jsonapi/field_config/field_config?filter[entity_type]=node&filter[bundle]=article",
      "pathname": "/jsonapi/field_config/field_config",
      "port": null,
      "protocol": null,
      "query": "filter[entity_type]=node&filter[bundle]=article",
      "search": "?filter[entity_type]=node&filter[bundle]=article",
      "slashes": null,
    },
    "redirect": "follow",
    "signal": null,
  },
}
`;

exports[`DrupalEntity serializes patch request to include changes 1`] = `
Request {
  "agent": undefined,
  "compress": true,
  "counter": 0,
  "follow": 20,
  "size": 0,
  "timeout": 0,
  Symbol(Body internals): Object {
    "body": "{\\"data\\":{\\"type\\":\\"node--article\\",\\"attributes\\":{\\"body\\":{\\"value\\":\\"<p>Drupal rocks!</p>\\"}},\\"id\\":\\"04808c36-9a01-4503-952d-f4dd88a1186a\\"}}",
    "disturbed": false,
    "error": null,
  },
  Symbol(Request internals): Object {
    "headers": Headers {
      Symbol(map): Object {
        "Accept": Array [
          "application/vnd.api+json",
        ],
        "Content-Type": Array [
          "application/vnd.api+json",
        ],
      },
    },
    "method": "PATCH",
    "parsedURL": Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/jsonapi/node/article/04808c36-9a01-4503-952d-f4dd88a1186a",
      "path": "/jsonapi/node/article/04808c36-9a01-4503-952d-f4dd88a1186a",
      "pathname": "/jsonapi/node/article/04808c36-9a01-4503-952d-f4dd88a1186a",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    "redirect": "follow",
    "signal": null,
  },
}
`;

exports[`DrupalEntity serializes post request to include entity information 1`] = `
Request {
  "agent": undefined,
  "compress": true,
  "counter": 0,
  "follow": 20,
  "size": 0,
  "timeout": 0,
  Symbol(Body internals): Object {
    "body": "{\\"data\\":{\\"type\\":\\"node--article\\",\\"attributes\\":{\\"body\\":{\\"value\\":\\"<p>Drupal rocks!</p>\\"}},\\"relationships\\":{\\"field_reference\\":{\\"id\\":\\"04808c36-9a01-4503-952d-f4dd88a1186a\\"}}}}",
    "disturbed": false,
    "error": null,
  },
  Symbol(Request internals): Object {
    "headers": Headers {
      Symbol(map): Object {
        "Accept": Array [
          "application/vnd.api+json",
        ],
        "Content-Type": Array [
          "application/vnd.api+json",
        ],
      },
    },
    "method": "POST",
    "parsedURL": Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/jsonapi/node/article",
      "path": "/jsonapi/node/article",
      "pathname": "/jsonapi/node/article",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    "redirect": "follow",
    "signal": null,
  },
}
`;
